infra/production/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  namespace: labelled
  annotations:
    cert-manager.io/cluster-issuer: "infrastructure-issuer"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - app.labelled-eg.com
      secretName: infrastructure-tls
  rules:
    - host: app.labelled-eg.com
      http:
        paths:
          - path: /api/auth/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: auth-srv
                port:
                  number: 3000
    - host: app.labelled-eg.com
      http:
        paths:
          - path: /api/queries/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: queries-srv
                port:
                  number: 3000
    - host: app.labelled-eg.com
      http:
        paths:
          - path: /?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: web-srv
                port:
                  number: 3000
---
